# advanced-mlops

./: README.md  pyproject.toml
api/: services.py
api/docker/: docker-compose.yml
pipelines/continuous_training/: continuous_training_dag.py
pipelines/continuous_training/data_preprocessing/: preprocessor.py
pipelines/continuous_training/docker/: Dockerfile  docker-compose.yml
pipelines/continuous_training/training/: trainer.py
pipelines/tutorial/: first_dag.py  test_dag.py
